--- a/ts/views/layout.jade
+++ b/ts/views/layout.jade
@@ -8,6 +8,8 @@ html
        <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     link(rel='stylesheet', type='text/css', href='css/font-awesome.css')
     link(rel='stylesheet', type='text/css', href='css/style.css')
+    link(href='http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic' rel='stylesheet' type='text/css')
+    link(href='http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic' rel='stylesheet' type='text/css')
   body
     #nav-bar
       p WebBlargh
