--- a/ts/assets/css/style.css
+++ b/ts/assets/css/style.css
@@ -4,12 +4,15 @@
   bottom: 10px;
   margin-left: 100px;
   margin-right: 100px;
-  background-color: #5E9191;
+  /*background-color: #0A2929;*/
+  background: linear-gradient(#0A2929, #165656);
   overflow: scroll;
   border-bottom-right-radius: 5px;
   border-top-right-radius: 5px;
   border-bottom-left-radius: 5px;
   border-top: 1px solid;
+  box-shadow: -2px 2px 5px #AAAAAA;
+  z-index: 0;
   /*max-height: 700px;*/
 }
 
@@ -22,12 +25,17 @@ body {
   color: black;
 }
 
-#nav-links a {
-  color: black;
+#nav-links {
+  padding-left: 5px;
 }
 
-ul#nav-links {
-  padding-left: 0;
+#nav-links a {
+  color: black;
+  text-decoration: none;
+}
+
+#nav-links li {
+  list-style-type: none;
 }
 
 #nav-bar {
@@ -37,18 +45,54 @@ ul#nav-links {
   border-left: 1px solid;
   border-bottom: 1px solid;
   position: fixed;
+  z-index: 1;
   top: 10px;
   max-width: 100px;
   width: 100px;
-  background-color: #E0E0E0;
+  background-color: #E9E9E9;
 }
 
-.site-title {
-  text-align: center;
+#site-title {
+  color: white;
+  text-shadow: 0 0 1px #101010;
+  background-color: #131D1D;
+  background: linear-gradient(#165656, #0A2929);
+  margin-left: 10px;
+  margin-right: 10px;
+  border-top-right-radius: 5px;
+  /*border-top-left-radius: 5px;*/
+  padding: 5px;
+  height: 150px;
 }
 
-.post-title {
+#site-title .first {
+  color: #C2FFFF;
+}
 
+#site-title .second{
+  color: #88B2B2;
+}
+
+#site-title .subtitle {
+  line-height: 10%;
+  font-weight: lighter;
+}
+
+#end-nav .previous {
+  color: white;
+  float: left;
+  margin-left: 5px;
+}
+
+#end-nav a {
+  color: white;
+  text-decoration: none;
+}
+
+#end-nav .next {
+  color: white;
+  float: right;
+  margin-right: 5px;
 }
 
 #post-text {
@@ -61,20 +105,23 @@ ul#nav-links {
   border: 1px solid;
   border-color: black;
   border-radius: 5px;
+  box-shadow: -1px 1px 1px 1px black;
 }
 
 #post-text pre {
-  background-color: #0A2929; /*#2A2A2A*/
+  background: linear-gradient(black, #092222); /*#2A2A2A*/
   color: white;
   max-width: 80%;
-  font-family: 'Source Code Pro', Monaco, monospace;
+  font-family: Monaco, monospace;
+  max-height: 300px;
   margin: 0 auto;
-  /*font-size: 80%;*/
+  font-size: 80%;
   overflow: scroll;
-  border: 1px solid;
-  border-color: white;
+/*  border: 1px solid;
+  border-color: white; */
   border-radius: 5px;
   padding: 5px;
+  box-shadow: inset 0px 0px 5px rgba(200,200,200,0.9);
 }
 
 #post-text p {
