--- a/ts/views/layout.jade
+++ b/ts/views/layout.jade
@@ -13,7 +13,7 @@ html
       ul#nav-links
         li #[a(href='#') About]
         li #[a(href='#') Latest]
-        li #[a(href='#') Contact]
+        li #[a(href='mailto:ithinkican@gmail.com') Contact]
         li #[a(href='http://github.com/thinkpad20') Github]
 
     #main
